--- a/excursion-project/resources/css/style.css
+++ b/excursion-project/resources/css/style.css
@@ -1,12 +1,23 @@
 body {
     background-color: black;
+    font-family: Verdana, sans-serif;
+    text-align: center;
 }
 
 h1 {
     color: white;
-    text-align: center;
+    font-size: 50px;
+}
+
+h2 {
+    color: white;
+    font-size: 42px;
 }
 
 a {
     color: aquamarine;
+}
+
+video {
+    text-align: center;
 }
