--- a/excursion-project/resources/css/style.css
+++ b/excursion-project/resources/css/style.css
@@ -12,12 +12,19 @@ h1 {
 h2 {
     color: white;
     font-size: 42px;
+    font-weight: 300;
 }
 
 a {
     color: aquamarine;
+    font-size: 16px;
 }
 
 video {
     text-align: center;
+}
+
+p {
+    font-size: 21px;
+    color: gray;
 }
